# gmx_python_sdk

./: .gitignore  config.yaml  pyproject.toml
example_scripts/: GmOracleProvider.json  Oracle.json  anvil_set.py  create_decrease_order.py  create_decrease_order_with_known_positions.py  create_deposit_order.py  create_increase_order.py  create_swap_order.py  create_withdraw_order.py  estimate_swap_output.py  extended_increase_order.py  extended_swap.py  get_gmx_stats.py  get_liquidation_price.py  get_positions.py  identify_farming_opportunities.py  setting_config.py  utils.py  working_liq_calc.py
gmx_python_sdk/scripts/v2/: approve_token_for_spend.py  gas_utils.py  gmx_utils.py  keys.py  signers.py
gmx_python_sdk/scripts/v2/get/: get.py  get_available_liquidity.py  get_borrow_apr.py  get_claimable_fees.py  get_contract_balance.py  get_funding_apr.py  get_glv_stats.py  get_gm_prices.py  get_markets.py  get_open_interest.py  get_open_positions.py  get_oracle_prices.py  get_pool_tvl.py  test.py
gmx_python_sdk/scripts/v2/order/: create_swap_order.py  deposit.py  liquidity_argument_parser.py  order.py  order_argument_parser.py  withdraw.py
gmx_python_sdk/scripts/v2/utils/: exchange.py  hash_utils.py  keys.py  math.py  oracle.py
